tests/rascal/negative/type_errors/L1/19_expression_ES10_D4_96.ob
MODULE Test19;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := ((((1223 DIV y) MOD (1 * 1223)) DIV ((- z) + (1223 + 2))) # ((- (z + y)) DIV ((- x) * (z - 2))));
               q := ((((+ 1) MOD (200 DIV z)) = ((1 * 0) DIV (x DIV 2))) OR (((+ 1) MOD (x + x)) >= (- (y + z))));
               p := ((- (- (+ 1223))) # (+ ((2 - 0) DIV (z - y))));
               q := (((+ (- 1223)) # ((200 * z) + (200 DIV 1223))) OR ((+ (200 * 200)) < ((+ x) MOD (z * y))));
               r := ((+ ((y + 1) * (z DIV 2))) >= ((+ (z DIV 200)) + ((1223 + x) MOD (+ 0))));
               z := ((((+ 200) DIV (x - y)) + ((2 MOD 1) + (2 MOD 0))) DIV (((0 DIV x) * (x DIV y)) * ((1 + x) - (2 + 0))));
               r := ((((200 DIV 200) DIV (z DIV y)) + ((- x) + (z DIV 1223))) >= (((200 - 1223) + (x DIV 2)) MOD ((x DIV z) MOD (0 DIV y))));
               r := ((((200 - 200) * (1223 DIV 1)) - ((1 - 1) - (200 * 1223))) >= (- ((y * 1) * (1 MOD 0))));
  (* error *)  r := (((- (q - 1)) = ((+ 1223) DIV (0 * y))) & ((- (2 * z)) > ((+ x) * (2 - 1))));
               x := ((((0 * 200) + (- 2)) - ((1 MOD 0) * (+ y))) DIV ((+ (+ y)) DIV ((1 + z) - (1223 MOD x))))
END Test19.